--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -20,6 +20,7 @@
   color: $colour-text-inverse;
   display: inline-block;
   font-weight: normal;
+  margin: rem(0 0 $spacing-x-small 0);
   padding: em(0 $spacing-x-small);
   text-decoration: none;
   vertical-align: baseline;
